--- a/public/styles/sass/header.scss
+++ b/public/styles/sass/header.scss
@@ -47,27 +47,4 @@ header ul {
     height: 2.5em;
 }
 
-a:not(.anchor-no-effect) {
-    position: relative;
-    transition: all 0.3s linear;
-    padding-bottom: 0.1em;
-    &:hover {
-        color: $yellow;
-        &::after {
-            transform: scaleX(100%);
-        }
-    }
 
-    &::after {
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 2px;
-        transform: scaleX(0);
-        bottom: 0;
-        left: 0;
-        background-color: $yellow;
-        transform-origin: center;
-        transition: all 0.3s ease-in-out;
-    }
-}
