--- a/public/styles/sass/main.scss
+++ b/public/styles/sass/main.scss
@@ -5,10 +5,6 @@
     padding: 0;
 }
 
-a {
-    color: $contrast;
-}
-
 main {
     width: 80%;
     margin: auto;
@@ -20,4 +16,29 @@ main {
     padding: $padding-med;
     border: none;
     border-radius: 0.5em;
+}
+
+a:not(.anchor-no-effect) {
+    position: relative;
+    transition: all 0.3s linear;
+    padding-bottom: 0.1em;
+    &:hover {
+        color: $yellow;
+        &::after {
+            transform: scaleX(100%);
+        }
+    }
+
+    &::after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        transform: scaleX(0);
+        bottom: 0;
+        left: 0;
+        background-color: $yellow;
+        transform-origin: center;
+        transition: all 0.3s ease-in-out;
+    }
 }
